# tunarr

./: .env.local  Cargo.toml  README.md
src/: album.rs  main.rs  music_processor.rs  web_server.rs
static/: index.html  settings.html  styles.css
