[package]
name = "tunarr"
version = "0.1.0"
edition = "2021"

[dependencies]
id3 = "1.14.0"
mp4ameta = "0.11.0"  # For M4A files
lofty = "0.21.1" # For FLAC, OGG, AAC files
actix-web = "4.0"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"  
dotenv = "0.15.0"
rand = "0.8.5"
walkdir = "2.5.0"
futures = "0.3.30"
futures-util = "0.3.30"
async-stream = "0.3.5"
